k8s.insert-data.vizsga.yml
apiVersion: v1
kind: Pod
metadata:
  name: temp-dev-pod
spec:
  containers:
    - name: temp-dev-container
      image: busybox
      command: [ "sleep", "3600" ]
      volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d
          name: csengo-v2-dev
          subPath: initdb
        - mountPath: /var/lib/postgresql/data
          name: csengo-v2-dev
          subPath: postgesql
        - mountPath: /data
          name: csengo-v2-dev
          subPath: data
  volumes:
    - name: csengo-v2-dev
      persistentVolumeClaim:
        claimName: csengo-v2-dev-pvc
