k8s.csengo-v2.local.dev.yml
# minikube image load csengo-ts-server-v2:latest
# minikube image load csengo-ts-client-v2:latest
# DO k8s.insert-data.yml FIRST
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-postgres
  template:
    metadata:
      labels:
        app: csengo-v2-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: csengo-v2
              subPath: postgresql
            - mountPath: /docker-entrypoint-initdb.d
              name: csengo-v2
              subPath: initdb
      volumes:
        - name: csengo-v2
          persistentVolumeClaim:
            claimName: csengo-v2-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-server
  template:
    metadata:
      labels:
        app: csengo-v2-server
    spec:
      containers:
        - name: server-app
          image: csengo-ts-server-v2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3300
          volumeMounts:
            - mountPath: /data
              name: csengo-v2
              subPath: data
      volumes:
        - name: csengo-v2
          persistentVolumeClaim:
            claimName: csengo-v2-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-client
  template:
    metadata:
      labels:
        app: csengo-v2-client
    spec:
      containers:
        - name: client-app
          image: csengo-ts-client-v2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-pgadmin
  template:
    metadata:
      labels:
        app: csengo-v2-pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: csengo-v2
              subPath: pgadmin
      volumes:
        - name: csengo-v2
          persistentVolumeClaim:
            claimName: csengo-v2-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-postgres
spec:
  selector:
    app: csengo-v2-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30582
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-server
spec:
  selector:
    app: csengo-v2-server
  ports:
    - protocol: TCP
      port: 3300
      targetPort: 3300
      nodePort: 30666
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-client
spec:
  selector:
    app: csengo-v2-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30665
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-pgadmin
spec:
  selector:
    app: csengo-v2-pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30667
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csengo-v2-ingress
spec:
  rules:
#    - host: postgres.csengo.local
    -  http:
        paths:
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-postgres
                port:
                  number: 5432
#    - host: server.csengo.local
    -  http:
        paths:
          - path: /server
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-server
                port:
                  number: 3300
#    - host: client.csengo.local
    -  http:
        paths:
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-client
                port:
                  number: 80
#    - host: pgadmin.csengo.local
    -  http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-pgadmin
                port:
                  number: 80
