k8s.csengo-v2.vizsga.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-dev-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-dev-postgres
  template:
    metadata:
      labels:
        app: csengo-v2-dev-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: csengo-v2-dev
              subPath: postgresql
            - mountPath: /docker-entrypoint-initdb.d
              name: csengo-v2-dev
              subPath: initdb
      volumes:
        - name: csengo-v2-dev
          persistentVolumeClaim:
            claimName: csengo-v2-dev-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-dev-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-dev-server
  template:
    metadata:
      labels:
        app: csengo-v2-dev-server
    spec:
      containers:
        - name: server-app
          image: ghcr.io/pollak-projects/csengo-ts/server-app:latest
          ports:
            - containerPort: 3300
          volumeMounts:
            - mountPath: /data
              name: csengo-v2-dev
              subPath: data
      volumes:
        - name: csengo-v2-dev
          persistentVolumeClaim:
            claimName: csengo-v2-dev-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-dev-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-dev-client
  template:
    metadata:
      labels:
        app: csengo-v2-dev-client
    spec:
      containers:
        - name: client-app
          image: ghcr.io/pollak-projects/csengo-ts/client-app:latest
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csengo-v2-dev-pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csengo-v2-dev-pgadmin
  template:
    metadata:
      labels:
        app: csengo-v2-dev-pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: csengo-v2-dev-pgadmin
              subPath: pgadmin
      volumes:
        - name: csengo-v2-dev
          persistentVolumeClaim:
            claimName: csengo-v2-dev-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-dev-postgres
spec:
  selector:
    app: csengo-v2-dev-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30582
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-dev-server
spec:
  selector:
    app: csengo-v2-dev-server
  ports:
    - protocol: TCP
      port: 3300
      targetPort: 3300
      nodePort: 30666
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-dev-client
spec:
  selector:
    app: csengo-v2-dev-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30665
  type: NodePort


---
apiVersion: v1
kind: Service
metadata:
  name: csengo-v2-dev-pgadmin
spec:
  selector:
    app: csengo-v2-dev-pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30667
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csengo-v2-ingress
spec:
  rules:
    - host: postgres.csengo.vizsga.pollak.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-dev-postgres
                port:
                  number: 5432
    - host: api-csengo.vizsga.pollak.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-dev-server
                port:
                  number: 3300
    - host: csengo.vizsga.pollak.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-dev-client
                port:
                  number: 80
    - host: db-csengo.vizsga.csengo.pollak.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csengo-v2-dev-pgadmin
                port:
                  number: 80
